fixing layout shift

--- a/pages/locationsName.module.css
+++ b/pages/locationsName.module.css
@@ -1,6 +1,5 @@
 .articleContainer {
   padding-top: 5rem;
-  min-height: 900px;
 }
 
 .articleContainer article {
